--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -1,82 +1,15 @@
 .hero {
-  background-color: getColor(background-hero);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/main/hero.jpg);
-    
-
-  // @media (min-width:$tablet) {
-  //   width: 768px;
-  //   background-image: linear-gradient(
-  //     to right,
-  //     rgba(47, 48, 58, 0.4),
-  //     rgba(47, 48, 58, 0.4)
-  //   ),
-  //   url(../images/main/hero_tablet.jpg);
-  //   background-size: 768px 400px;
-  // }
-
-  // @media (min-width:$desktop) {
-  //   width: 1600px;
-  //   height: 600px;
-  //   background-image: linear-gradient(
-  //     to right,
-  //     rgba(47, 48, 58, 0.4),
-  //     rgba(47, 48, 58, 0.4)
-  //   ),
-  //   url(../images/main/hero.jpg);
-  //   background-size: 1600px 600px;
-  // }
-}
-
-@media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/main/hero_mobile2x.jpg);
-  }
-}
-
-@media (min-width:$tablet),
-  (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/main/hero_tablet2x.jpg);
-  }
-}
-
-@media (min-width:$desktop),
-  (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/main/hero2x.jpg);
-  }
+    background-image: linear-gradient(to right,
+     rgba(47, 48, 58, 0.4),
+     rgba(47, 48, 58, 0.4)),
+     url(../images/main/hero.jpg);
+    background-color: getColor(background-hero);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;    
 }
 
 .hero__container {
@@ -84,7 +17,7 @@
   text-align: center;
   padding: 118px 0;
 
-  @media (min-width:desktop) {
+  @media (min-width:$desktop) {
       padding: 200px 0;
   }
 }
