--- a/sass/general/_footer.scss
+++ b/sass/general/_footer.scss
@@ -22,7 +22,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 60px;
     }    
 }
 
@@ -31,6 +30,7 @@
         display: flex;
         flex-direction: row;
         align-items: baseline;
+        justify-content: space-between;
     } 
 } 
 
@@ -105,12 +105,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 60px;
-
-  @media (min-width:$tablet) {
-      margin-left: auto;
+  
+  @media (max-width:767px) {
+    margin-top: 60px;
   }
-
+  
   @media (min-width:$desktop) {
       margin-left: 70px;
       align-items: flex-start;
@@ -160,10 +159,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 60px;
     
     @media (min-width:$desktop) {
-        margin-left: auto;
-        align-items: flex-start;
+      margin-top: 0;
+      margin-left: auto;
+      align-items: flex-start;
     }
 }
 
