--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -9,22 +9,7 @@
     background-size: cover;
     max-width: 1600px;
     margin-left: auto;
-    margin-right: auto;
-
-    @media (max-width:767px) {
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_mobile.jpg);
-    }
-
-    @media (max-width:1199px) {
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_tablet.jpg);
-    }
-    
+    margin-right: auto;  
 }
 
 @media (max-width:767px),
@@ -40,7 +25,6 @@
 }
 
 @media (min-width:$tablet),
-(max-width:1199px),
 (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
@@ -60,7 +44,7 @@
     background-image: linear-gradient(to right,
      rgba(47, 48, 58, 0.4),
      rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_mobile2x.jpg);
+     url(../images/main/hero2x.jpg);
   }
 }
 
