--- a/sass/index/_modal.scss
+++ b/sass/index/_modal.scss
@@ -84,13 +84,18 @@
 .signup-form__label {
     display: flex;
     flex-direction: column;
+    
 
     font-family: Roboto;
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
     color: getColor('primary');
-    margin-bottom: 10px;
+
+    transition: color $duration $cubic-bezier;
+}
+
+.signup-form__container {
     
     &:hover .data-input__place,
     &:focus .data-input__place,
@@ -104,11 +109,18 @@
     &:focus-within .data-input__icon {
        fill: getColor('accent');
     }
+
+    &:hover .signup-form__label,
+    &:focus .signup-form__label,
+    &:focus-within .signup-form__label {
+       color: getColor('accent');
+    }
 }
 
 .data-input {
     position: relative;
     margin-top: 4px;
+    margin-bottom: 10px;
 }
 
 .data-input__place {
@@ -143,6 +155,7 @@
     resize : none;
 
     padding: 12px 16px;
+    margin-bottom: 20px;
     margin-top: 4px;
     transition: border $duration $cubic-bezier;
     
