--- a/sass/general/_footer.scss
+++ b/sass/general/_footer.scss
@@ -185,14 +185,14 @@
 }
 
 .subscription__input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   font-family: Roboto;
   font-size: 16px;
   line-height: 20px;
-  color: getColor("secondary");
-  background: getColor("background-dark");
-  border: 1px solid getColor("icon-dark");
+  color: getColor('secondary');
+  background: getColor('background-dark');
+  border: 1px solid getColor('icon-dark');
   border-radius: 4px;
 
   margin-bottom: 20px;
