--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -13,14 +13,7 @@
     rgba(47, 48, 58, 0.4)),
     url(../images/main/hero_mobile.jpg);
     
-    @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_mobile2x.jpg);
-    }
+    
 
     @media (min-width:$tablet) {
       background-image: linear-gradient(to right,
@@ -29,15 +22,7 @@
      url(../images/main/hero_tablet.jpg);
     }
 
-    @media (min-width:$tablet) and 
-    (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_tablet2x.jpg);
-    }
+    
 
     @media (min-width:$desktop) {
       height: 600px;
@@ -46,11 +31,36 @@
      rgba(47, 48, 58, 0.4)),
      url(../images/main/hero.jpg);  
     }
+}
 
-    @media (min-width:$desktop) and 
+@media (max-width:767px) and (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+   .hero {
+     background-image: linear-gradient(to right,
+     rgba(47, 48, 58, 0.4),
+     rgba(47, 48, 58, 0.4)),
+     url(../images/main/hero_mobile2x.jpg);
+    }
+}
+
+@media (min-width:$tablet) and (max-width:1199px) and
     (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
+   .hero {
+      background-image: linear-gradient(to right,
+     rgba(47, 48, 58, 0.4),
+     rgba(47, 48, 58, 0.4)),
+     url(../images/main/hero_tablet2x.jpg);
+    }
+}
+
+@media (min-width:$desktop) and 
+    (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+  .hero {
     background-image: linear-gradient(to right,
      rgba(47, 48, 58, 0.4),
      rgba(47, 48, 58, 0.4)),
