--- a/sass/general/_footer.scss
+++ b/sass/general/_footer.scss
@@ -156,10 +156,12 @@
 }
 
 .subscription {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: block;
     margin-top: 60px;
+
+    @media (max-width:1199px) {
+    text-align: center;
+    }
     
     @media (min-width:$desktop) {
       margin-top: 0;
@@ -185,7 +187,8 @@
 }
 
 .subscription__input {
-  width: 450px;
+  display: block;
+  width: 100%;
   height: 50px;
   font-family: Roboto;
   font-size: 16px;
