--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -1,70 +1,52 @@
 .hero {
-    background-color: getColor(background-hero);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;  
+  background-color: getColor(background-hero);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;  
 
-    height: 400px;
+  height: 400px;
+  background-image: linear-gradient(to right,
+  rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)),
+  url(../images/main/hero_mobile.jpg);
+
+  @media (min-width:$tablet) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero_mobile.jpg);
-    
-    
+    url(../images/main/hero_tablet.jpg);
+  }
 
-    @media (min-width:$tablet) {
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_tablet.jpg);
-    }
-
-    
-
-    @media (min-width:$desktop) {
-      height: 600px;
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero.jpg);  
-    }
-}
-
-@media (max-width:767px) and (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-   .hero {
-     background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_mobile2x.jpg);
-    }
-}
-
-@media (min-width:$tablet) and (max-width:1199px) and
-    (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-   .hero {
-      background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero_tablet2x.jpg);
-    }
-}
-
-@media (min-width:$desktop) and 
-    (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-  .hero {
+  @media (min-width:$desktop) {
+    height: 600px;
     background-image: linear-gradient(to right,
-     rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)),
-     url(../images/main/hero2x.jpg);
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/hero.jpg);  
+  }
+
+  @media not all, screen and (max-width: 767px), (min-device-pixel-ratio: 2),(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/hero_mobile2x.jpg);
+  }
+
+  @media not all, screen and (min-width: 768px),(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) and (min-width: 768px) {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/hero_tablet2x.jpg);
+  }
+  
+  @media (min-width:$desktop) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi),(min-resolution: 2dppx) {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/hero2x.jpg);
   }
 }
 
@@ -74,26 +56,26 @@
   padding: 118px 0;
 
   @media (min-width:$desktop) {
-      padding: 200px 0;
+    padding: 200px 0;
   }
 }
 
 .hero__title {
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 42px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 42px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
 
-    max-width: 360px;
-    margin: 0px auto 30px;
+  max-width: 360px;
+  margin: 0px auto 30px;
 
-    @media (min-width:$desktop) {
-        font-size: 44px;
-        line-height: 60px;
-        max-width: 696px;
-    }
+  @media (min-width:$desktop) {
+    font-size: 44px;
+    line-height: 60px;
+    max-width: 696px;
+  }
 }
 
 .hero__button {
