--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -35,14 +35,14 @@
     url(../images/main/hero_mobile2x.jpg);
   }
 
-  @media not all, screen and (min-width: 768px),(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) and (min-width: 768px) {
+  @media not all, screen and (min-width: 768px),(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url(../images/main/hero_tablet2x.jpg);
   }
   
-  @media (min-width:$desktop) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi),(min-resolution: 2dppx) {
+  @media not all, screen and (min-width: 1200px),(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
