--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -3,25 +3,25 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;  
 
-  height: 400px;
+  max-width: 1600px;
+  max-height: 400px;
   background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)),
   url(../images/main/hero_mobile.jpg);
 
-  @media (min-width:$tablet) {
+  @media screen and (min-width:$tablet) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url(../images/main/hero_tablet.jpg);
   }
 
-  @media (min-width:$desktop) {
-    height: 600px;
+  @media screen and (min-width:$desktop) {
+    max-height: 600px;
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
