--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -8,49 +8,69 @@
 
   max-width: 1600px;
   max-height: 400px;
+
   background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)),
   url(../images/main/hero_mobile.jpg);
 
-  @media not all, (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  @media not all,
+  screen and (max-width:767px),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url(../images/main/hero_mobile2x.jpg);
-  }  
+  }
+}
 
-  @media screen and (min-width:$tablet) {
+@media screen and (min-width:$tablet) {
+  .hero {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url(../images/main/hero_tablet.jpg);
+  }
+}
 
-    @media not all, (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media not all,
+screen and (min-width:$tablet),
+(-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+ .hero {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url(../images/main/hero_tablet2x.jpg);
-    }
-  }
-
-  // @media screen and (min-width:$desktop) {
-  //   max-height: 600px;
-  //   background-image: linear-gradient(to right,
-  //   rgba(47, 48, 58, 0.4),
-  //   rgba(47, 48, 58, 0.4)),
-  //   url(../images/main/hero.jpg); 
-    
-  //   @media not all,(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  //   background-image: linear-gradient(to right,
-  //   rgba(47, 48, 58, 0.4),
-  //   rgba(47, 48, 58, 0.4)),
-  //   url(../images/main/hero2x.jpg);
-  //   }  
-  // }
-
+  } 
 }
 
+@media screen and (min-width:$desktop) {
+  .hero {
+    max-height: 600px;
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/hero.jpg);
+  }
+}
+
+@media not all,
+screen and (min-width:$desktop), 
+(-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi), 
+(min-resolution: 2dppx) {
+ .hero {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/hero2x.jpg);
+  }
+}
+    
 .hero__container {
   margin: 0px auto;
   text-align: center;
