--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -12,17 +12,16 @@
   background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)),
-  url(../images/main/img_mobile@1x.jpg);
+  url(../images/main/hero_mobile.jpg);
 
-  @media not all,
-  screen and (max-width:767px),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+  @media
+  screen and (max-width:767px) and (-webkit-min-device-pixel-ratio: 2),
+  screen and (max-width:767px) and (min-resolution: 192dpi),
+  screen and (max-width:767px) and (min-resolution: 2dppx) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/img_mobile@2x.jpg);
+    url(../images/main/hero_mobile2x.jpg);
   }
 }
 
@@ -31,20 +30,19 @@
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/img_tablet@1x.jpg);
+    url(../images/main/hero_tablet.jpg);
   }
 }
 
-@media not all,
-screen and (min-width:$tablet),
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+@media
+screen and (min-width:$tablet) and (-webkit-min-device-pixel-ratio: 2),
+screen and (min-width:$tablet) and (min-resolution: 192dpi),
+screen and (min-width:$tablet) and (min-resolution: 2dppx) {
  .hero {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/img_tablet@2x.jpg);
+    url(../images/main/hero_tablet2x.jpg);
   } 
 }
 
@@ -54,20 +52,19 @@ screen and (min-width:$tablet),
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/img_desktop@1x.jpg);
+    url(../images/main/hero.jpg);
   }
 }
 
-@media not all,
-screen and (min-width:$desktop), 
-(-webkit-min-device-pixel-ratio: 2), 
-(min-resolution: 192dpi), 
-(min-resolution: 2dppx) {
+@media 
+screen and (min-width:$desktop) and (-webkit-min-device-pixel-ratio: 2), 
+screen and (min-width:$desktop) and (min-resolution: 192dpi), 
+screen and (min-width:$desktop) and (min-resolution: 2dppx) {
  .hero {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/img_desktop@2x.jpg);
+    url(../images/main/hero2x.jpg);
   }
 }
     
